// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Big ToggleSwitch 1`] = `
.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  display: none;
}

.c3 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  height: 0px;
  opacity: 0;
  width: 0px;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #262D33;
  cursor: pointer;
  display: inline-block;
  font-size: 0.875rem;
  font-weight: 600;
  height: 3.75rem;
  position: relative;
  margin-right: 0.5rem;
  width: 6.5625rem;
}

.c5 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-radius: 3.75rem;
  bottom: 0;
  background-color: #C1C6CC;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}

.c5:hover {
  box-shadow: 0 0 .01rem 0.01rem rgba(100,81,138,0.5);
}

.c7 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-radius: 50%;
  bottom: 0.375rem;
  background-color: #FFFFFF;
  height: 3rem;
  left: 0.375rem;
  position: absolute;
  width: 3rem;
}

.c6 {
  -webkit-transition: 300ms;
  transition: 300ms;
}

.c4 {
  -webkit-transition: 300ms;
  transition: 300ms;
}

.c0:focus-within {
  border-radius: 3.75rem;
  box-shadow: 0 0 0 0.2rem rgba(100,81,138,0.4);
}

<label
  className="c0 c1"
  cursor="pointer"
>
  <div
    className="c2"
    id="7a2a0efb-ecf5-4dfa-bd96-1a9ea0f75550"
  >
    Large toggle
  </div>
  <input
    aria-labelledby="7a2a0efb-ecf5-4dfa-bd96-1a9ea0f75550"
    className="c3"
    role="switch"
    type="checkbox"
  />
  <div
    className="c4 c5"
  >
    <div
      className="c6 c7"
    />
  </div>
</label>
`;

exports[`ToggleSwitch default 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #262D33;
  cursor: pointer;
  display: inline-block;
  font-size: 0.875rem;
  font-weight: 600;
  height: 1.25rem;
  position: relative;
  margin-right: 0.5rem;
  width: 2.1875rem;
}

.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  display: none;
}

.c3 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  height: 0px;
  opacity: 0;
  width: 0px;
}

.c5 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-radius: 1.25rem;
  bottom: 0;
  background-color: #C1C6CC;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}

.c5:hover {
  box-shadow: 0 0 .01rem 0.01rem rgba(100,81,138,0.5);
}

.c7 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-radius: 50%;
  bottom: 0.125rem;
  background-color: #FFFFFF;
  height: 1rem;
  left: 0.125rem;
  position: absolute;
  width: 1rem;
}

.c6 {
  -webkit-transition: 300ms;
  transition: 300ms;
}

.c4 {
  -webkit-transition: 300ms;
  transition: 300ms;
}

.c0:focus-within {
  border-radius: 1.25rem;
  box-shadow: 0 0 0 0.2rem rgba(100,81,138,0.4);
}

<label
  className="c0 c1"
  cursor="pointer"
>
  <div
    className="c2"
    id="c7ac7d4c-c58e-4530-9493-1d538ea57778"
  >
    Default toggle
  </div>
  <input
    aria-labelledby="c7ac7d4c-c58e-4530-9493-1d538ea57778"
    className="c3"
    role="switch"
    type="checkbox"
  />
  <div
    className="c4 c5"
  >
    <div
      className="c6 c7"
    />
  </div>
</label>
`;

exports[`ToggleSwitch on set to false 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #262D33;
  cursor: pointer;
  display: inline-block;
  font-size: 0.875rem;
  font-weight: 600;
  height: 1.25rem;
  position: relative;
  margin-right: 0.5rem;
  width: 2.1875rem;
}

.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  display: none;
}

.c3 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  height: 0px;
  opacity: 0;
  width: 0px;
}

.c5 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-radius: 1.25rem;
  bottom: 0;
  background-color: #C1C6CC;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}

.c5:hover {
  box-shadow: 0 0 .01rem 0.01rem rgba(100,81,138,0.5);
}

.c7 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-radius: 50%;
  bottom: 0.125rem;
  background-color: #FFFFFF;
  height: 1rem;
  left: 0.125rem;
  position: absolute;
  width: 1rem;
}

.c6 {
  -webkit-transition: 300ms;
  transition: 300ms;
}

.c4 {
  -webkit-transition: 300ms;
  transition: 300ms;
}

.c0:focus-within {
  border-radius: 1.25rem;
  box-shadow: 0 0 0 0.2rem rgba(100,81,138,0.4);
}

<label
  className="c0 c1"
  cursor="pointer"
>
  <div
    className="c2"
    id="4363496a-806d-41de-9d72-fa6883825c61"
  >
    Off toggle
  </div>
  <input
    aria-labelledby="4363496a-806d-41de-9d72-fa6883825c61"
    checked={false}
    className="c3"
    role="switch"
    type="checkbox"
  />
  <div
    className="c4 c5"
  >
    <div
      className="c6 c7"
    />
  </div>
</label>
`;

exports[`ToggleSwitch on set to true 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #262D33;
  cursor: pointer;
  display: inline-block;
  font-size: 0.875rem;
  font-weight: 600;
  height: 1.25rem;
  position: relative;
  margin-right: 0.5rem;
  width: 2.1875rem;
}

.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  display: none;
}

.c3 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  height: 0px;
  opacity: 0;
  width: 0px;
}

.c7 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-radius: 50%;
  bottom: 0.125rem;
  background-color: #FFFFFF;
  height: 1rem;
  left: 0.125rem;
  position: absolute;
  width: 1rem;
}

.c5 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-radius: 1.25rem;
  bottom: 0;
  background-color: #9785F2;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}

.c5:hover {
  box-shadow: 0 0 .01rem 0.01rem rgba(100,81,138,0.5);
}

.c6 {
  -webkit-transform: translateX(0.9375rem);
  -ms-transform: translateX(0.9375rem);
  transform: translateX(0.9375rem);
  -webkit-transition: 300ms;
  transition: 300ms;
}

.c4 {
  -webkit-transition: 300ms;
  transition: 300ms;
}

.c0:focus-within {
  border-radius: 1.25rem;
  box-shadow: 0 0 0 0.2rem rgba(100,81,138,0.4);
}

<label
  className="c0 c1"
  cursor="pointer"
>
  <div
    className="c2"
    id="b9e31503-c9d3-4d7d-950a-ca1e0ebe589e"
  >
    On toggle
  </div>
  <input
    aria-labelledby="b9e31503-c9d3-4d7d-950a-ca1e0ebe589e"
    checked={true}
    className="c3"
    role="switch"
    type="checkbox"
  />
  <div
    className="c4 c5"
  >
    <div
      className="c6 c7"
    />
  </div>
</label>
`;

exports[`ToggleSwitch that is disabled 1`] = `
.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  display: none;
}

.c3 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  height: 0px;
  opacity: 0;
  width: 0px;
}

.c7 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-radius: 50%;
  bottom: 0.125rem;
  background-color: #FFFFFF;
  height: 1rem;
  left: 0.125rem;
  position: absolute;
  width: 1rem;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #262D33;
  display: inline-block;
  font-size: 0.875rem;
  font-weight: 600;
  height: 1.25rem;
  position: relative;
  margin-right: 0.5rem;
  width: 2.1875rem;
}

.c5 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-radius: 1.25rem;
  bottom: 0;
  background-color: #9785F2;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}

.c8 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-radius: 1.25rem;
  bottom: 0;
  background-color: #C1C6CC;
  left: 0;
  opacity: 0.4;
  position: absolute;
  right: 0;
  top: 0;
}

.c6 {
  -webkit-transform: translateX(0.9375rem);
  -ms-transform: translateX(0.9375rem);
  transform: translateX(0.9375rem);
  -webkit-transition: 300ms;
  transition: 300ms;
}

.c4 {
  -webkit-transition: 300ms;
  transition: 300ms;
}

.c0:focus-within {
  border-radius: 1.25rem;
  box-shadow: 0 0 0 0.2rem rgba(100,81,138,0.4);
}

<label
  className="c0 c1"
>
  <div
    className="c2"
    id="4a87208f-9ff4-44f8-8f8b-a8e13b74e8b6"
  >
    Disabled
  </div>
  <input
    aria-labelledby="4a87208f-9ff4-44f8-8f8b-a8e13b74e8b6"
    checked={true}
    className="c3"
    disabled={true}
    role="switch"
    type="checkbox"
  />
  <div
    className="c4 c5"
  >
    <div
      className="c6 c7"
    />
  </div>
  <div
    className="c8"
  />
</label>
`;
